# shelf

shelf/: LICENSE  README.md  setup.cfg
shelf/shelf/Scripts/: activate  activate.bat
shelf/src/: emotions.txt  iamtesting.ipynb
shelf/src/samples/: me.txt  raliat.txt  verygreek.txt
shelf/src/shelf/: helpers.py  spider.py
src/: iamtesting.ipynb  shelf.py  tome.py
src/samples/: thisis.txt
