[metadata]
name = shelf
version = 0.0.2
author = Cornel Duhaney
author_email = Cornelduhaney@gmail.com
description = Text analysis package centered on batch processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ka1s3r/shelf
project_urls = 
Bug Tracker = https://github.com/Ka1s3r/shelf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src